--- a/src/main/resources/com/example/throunndaytour/login-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/login-view.fxml
@@ -11,24 +11,24 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.example.throunndaytour.vidmot.LoginController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.LoginController">
     <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
 
     <!-- Welcome Text -->
-    <Text style="-fx-font-size: 16px;" text="Login / Register" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
+    <Text style="-fx-font-size: 16px;" text="Innskráning" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
 
     <!-- User Name Label and TextField -->
-    <Label text="email:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <Label text="Netfang:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
     <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
     <!-- Password Label and PasswordField -->
-    <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <Label text="Lykilorð:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
     <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
     <!-- Buttons for Sign In and Register -->
     <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="3">
-        <Button onAction="#handleSubmitButtonAction" text="Sign In" />
-        <Button onAction="#handleRegisterButtonAction" text="Register" />
+        <Button onAction="#handleSubmitButtonAction" text="Innskráning" />
+        <Button onAction="#handleRegisterButtonAction" text="Nýskráning" />
     </HBox>
    <Label fx:id="actionTarget" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    <columnConstraints>
