--- a/src/main/resources/com/example/throunndaytour/register-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/register-view.fxml
@@ -9,10 +9,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.RegisterController">
    <children>
-      <Text layoutX="278.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register" />
+      <Text layoutX="278.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nýskráning" />
       <GridPane layoutX="166.0" layoutY="99.0" prefHeight="249.0" prefWidth="255.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="59.66666666666666" />
@@ -25,16 +24,18 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="nameField" GridPane.columnIndex="1" />
+            <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="kennitalaField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Nafn:" />
             <Label text="Netfang:" GridPane.rowIndex="1" />
             <Label text="Kennitala:" GridPane.rowIndex="2" />
             <Label text="Lykilorð:" GridPane.rowIndex="3" />
          </children>
       </GridPane>
-      <Button layoutX="278.0" layoutY="348.0" mnemonicParsing="false" text="Staðfesta" />
+      <Button layoutX="239.3333282470703" layoutY="355.3333435058594" mnemonicParsing="false" onAction="#handleStadfestaButtonAction" text="Staðfesta" />
+    <Button layoutX="324.6666564941406" layoutY="355.3333435058594" mnemonicParsing="false" onAction="#handleLoginButtonAction" text="Innskráning" />
+      <Label fx:id="messageField" layoutX="241.0" layoutY="72.0" prefHeight="17.0" prefWidth="118.0" />
    </children>
 </AnchorPane>
