--- a/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -32,6 +32,11 @@
                      <children>
                         <TextField fx:id="searchField" prefHeight="25.0" prefWidth="131.0" />
                         <Button mnemonicParsing="false" onAction="#onLeitaHandler" text="Leita" />
+                        <ChoiceBox fx:id="sortChoiceBox" prefHeight="25.0" prefWidth="90.0">
+                           <HBox.margin>
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </ChoiceBox>
                      </children>
                   </HBox>
                </buttons>
@@ -39,16 +44,11 @@
             <VBox alignment="CENTER" prefHeight="399.0" prefWidth="74.0" spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <Button mnemonicParsing="false" onAction="#openDayTourHandler" text="Skoða" />
-                  <Button mnemonicParsing="false" text="Breyta" />
+                  <Button mnemonicParsing="false" onAction="#onBokaClick" text="Bóka" />
                   <Button mnemonicParsing="false" text="Eyða" textAlignment="CENTER" />
                </children>
             </VBox>
-            <VBox alignment="CENTER" GridPane.columnIndex="1">
-               <children>
-                  <Label prefHeight="17.0" prefWidth="29.0" text="Sort?" />
-                  <ChoiceBox fx:id="sortChoiceBox" prefHeight="25.0" prefWidth="90.0" />
-               </children>
-            </VBox>
+            <VBox alignment="CENTER" GridPane.columnIndex="1" />
          </children>
       </GridPane>
    </children>
