--- a/src/main/resources/com/example/throunndaytour/createTour-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/createTour-view.fxml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.throunndaytour.vidmot.CreateTourController"
-      prefHeight="400.0" prefWidth="600.0">
-   <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Búa til nýtt Day Tour" wrappingWidth="130.13671875" />
-      <HBox alignment="CENTER" prefHeight="23.0" prefWidth="600.0">
-         <children>
-            <Label text="Nafn:" />
-            <TextField />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="24.0" prefWidth="600.0">
-         <children>
-            <Label text="Lýsing:" />
-            <TextField />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="600.0">
-         <children>
-            <Label text="Nafn:" />
-            <TextField />
-         </children>
-      </HBox>
-   </children>
+<VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="600.0" spacing="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.CreateTourController">
+   <padding>
+      <Insets bottom="10" left="10" right="10" top="10" />
+   </padding>
+   <Text text="Búa til nýtt Day Tour" />
+   <GridPane prefHeight="241.0" prefWidth="580.0">
+     <columnConstraints>
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+     </columnConstraints>
+     <rowConstraints>
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+     </rowConstraints>
+      <children>
+         <Label text="Nafn: " />
+         <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <TextField fx:id="nameField" GridPane.columnIndex="1" />
+         <Label text="Verð: " GridPane.rowIndex="1" />
+         <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="75.0" text="Lengd (klst):" GridPane.rowIndex="2" />
+         <TextField fx:id="durationField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         <Label text="Dagsetning (DD/MM/YYYY):" GridPane.rowIndex="3" />
+         <Label text="Staðsetning:" GridPane.rowIndex="4" />
+         <TextField fx:id="locationField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+         <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      </children>
+   </GridPane>
+   <Button onAction="#handleSubmit" text="Staðfesta" />
+   <Label fx:id="infoLabel" prefHeight="17.0" prefWidth="174.0" />
 </VBox>
