--- a/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -45,11 +46,15 @@
                <children>
                   <Button mnemonicParsing="false" onAction="#openDayTourHandler" text="Skoða" />
                   <Button mnemonicParsing="false" onAction="#onCreateHandler" text="Búa til" />
-                  <Button mnemonicParsing="false" onAction="#onBokaClick" text="Bóka" />
+                  <Button mnemonicParsing="false" onAction="#BokaButtonHandler" text="Bóka" />
                   <Button mnemonicParsing="false" text="Eyða??" textAlignment="CENTER" />
                </children>
             </VBox>
-            <VBox alignment="CENTER" GridPane.columnIndex="1" />
+            <VBox alignment="CENTER" GridPane.columnIndex="1">
+               <children>
+                  <Label text="User:" />
+                  <Label fx:id="userName" text="Label" />
+               </children></VBox>
          </children>
       </GridPane>
    </children>
