--- a/src/main/resources/com/example/throunndaytour/createTour-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/createTour-view.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -21,6 +22,7 @@
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
      </columnConstraints>
      <rowConstraints>
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -29,15 +31,17 @@
      </rowConstraints>
       <children>
          <Label text="Nafn: " />
-         <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         <Label text="Lýsing" GridPane.rowIndex="1" />
+         <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          <TextField fx:id="nameField" GridPane.columnIndex="1" />
-         <Label text="Verð: " GridPane.rowIndex="1" />
-         <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="75.0" text="Lengd (klst):" GridPane.rowIndex="2" />
-         <TextField fx:id="durationField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-         <Label text="Dagsetning (DD/MM/YYYY):" GridPane.rowIndex="3" />
-         <Label text="Staðsetning:" GridPane.rowIndex="4" />
-         <TextField fx:id="locationField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-         <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+         <Label text="Verð: " GridPane.rowIndex="2" />
+         <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="75.0" text="Lengd (klst):" GridPane.rowIndex="3" />
+         <TextField fx:id="durationField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+         <Label text="Dagsetning (DD/MM/YYYY):" GridPane.rowIndex="4" />
+         <Label text="Staðsetning:" GridPane.rowIndex="5" />
+         <TextField fx:id="locationField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+         <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       </children>
    </GridPane>
    <Button onAction="#handleSubmit" text="Staðfesta" />
