--- a/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="461.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.controllers.DayTourController">
    <children>
@@ -42,12 +43,16 @@
                   </HBox>
                </buttons>
             </ButtonBar>
-            <VBox alignment="CENTER" prefHeight="399.0" prefWidth="74.0" spacing="15.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <VBox alignment="TOP_CENTER" prefHeight="399.0" prefWidth="74.0" spacing="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Button mnemonicParsing="false" onAction="#openDayTourHandler" text="Skoða" />
+                  <Button mnemonicParsing="false" onAction="#openDayTourHandler" text="Skoða">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin></Button>
                   <Button mnemonicParsing="false" onAction="#onCreateHandler" text="Búa til" />
                   <Button mnemonicParsing="false" onAction="#BokaButtonHandler" text="Bóka" />
-                  <Button mnemonicParsing="false" text="Eyða??" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" onAction="#deleteButtonHandler" text="Eyða" textAlignment="CENTER" />
+                  <Text fx:id="actionText" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="90.0" />
                </children>
             </VBox>
             <VBox alignment="CENTER" GridPane.columnIndex="1">
