--- a/src/main/resources/com/example/throunndaytour/tourDetails-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/tourDetails-view.fxml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.throunndaytour.vidmot.TourDetailsController"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.TourDetailsController">
     <children>
         <HBox alignment="CENTER">
-            <Label fx:id="nameLabel" />
+            <Label fx:id="nameLabel">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font></Label>
         </HBox>
+      <HBox alignment="CENTER" prefHeight="71.0" prefWidth="600.0">
+         <children>
+            <Text fx:id="descriptionText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="24.803359270095825" />
+         </children>
+      </HBox>
         <HBox alignment="CENTER">
             <Label fx:id="priceLabel" />
         </HBox>
@@ -27,7 +33,7 @@
             <Label fx:id="locationLabel" />
         </HBox>
         <HBox alignment="CENTER">
-            <Button text="Bóka" onAction="#onBokaClick" />
+            <Button onAction="#onBokaClick" text="Bóka" />
         </HBox>
     </children>
 </VBox>
