--- a/src/main/resources/com/example/throunndaytour/login-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/login-view.fxml
@@ -9,31 +9,41 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.LoginController">
+<GridPane alignment="center" hgap="10" prefHeight="222.0" prefWidth="295.0" vgap="10" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.LoginController">
     <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
 
     <!-- Welcome Text -->
-    <Text style="-fx-font-size: 16px;" text="Innskráning" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
+    <Text fill="#4260c7" style="-fx-font-size: 16px;" text="Login or sign up" wrappingWidth="234.2578125" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+      <font>
+         <Font name="System Bold" size="17.0" />
+      </font></Text>
 
     <!-- User Name Label and TextField -->
-    <Label text="Netfang:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <Label prefHeight="17.0" prefWidth="49.0" text="Email:" textFill="#4260c7" GridPane.columnIndex="0" GridPane.rowIndex="1">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Label>
     <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
     <!-- Password Label and PasswordField -->
-    <Label text="Lykilorð:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <Label prefHeight="17.0" prefWidth="64.0" text="Password:" textFill="#4260c7" GridPane.columnIndex="0" GridPane.rowIndex="2">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Label>
     <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
     <!-- Buttons for Sign In and Register -->
     <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="3">
-        <Button onAction="#handleSubmitButtonAction" text="Innskráning" />
-        <Button onAction="#handleRegisterButtonAction" text="Nýskráning" />
+        <Button defaultButton="true" onAction="#handleSubmitButtonAction" prefHeight="25.0" prefWidth="76.0" text="Login" />
+        <Button onAction="#handleRegisterButtonAction" prefHeight="25.0" prefWidth="76.0" text="Sign up" />
     </HBox>
    <Label fx:id="actionTarget" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
+      <ColumnConstraints maxWidth="78.0" minWidth="65.0" prefWidth="78.0" />
+      <ColumnConstraints maxWidth="161.0" minWidth="148.0" prefWidth="148.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
