--- a/src/main/resources/com/example/throunndaytour/login-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/login-view.fxml
@@ -40,7 +40,10 @@
         <Button defaultButton="true" onAction="#handleSubmitButtonAction" prefHeight="25.0" prefWidth="76.0" text="Login" />
         <Button onAction="#handleRegisterButtonAction" prefHeight="25.0" prefWidth="76.0" text="Sign up" />
     </HBox>
-   <Label fx:id="actionTarget" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+   <Label fx:id="actionTarget" prefHeight="17.0" prefWidth="147.0" textFill="#4260c7" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Label>
    <columnConstraints>
       <ColumnConstraints maxWidth="78.0" minWidth="65.0" prefWidth="78.0" />
       <ColumnConstraints maxWidth="161.0" minWidth="148.0" prefWidth="148.0" />
