--- a/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/dayTours-view.fxml
@@ -13,14 +13,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="461.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.controllers.DayTourController">
    <children>
       <GridPane prefHeight="461.0" prefWidth="600.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="571.3333435058594" minWidth="0.0" prefWidth="518.0000305175781" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="0.0" prefWidth="81.99996948242188" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="571.3333435058594" minWidth="0.0" prefWidth="480.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="0.0" prefWidth="120.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="404.3333435058594" minHeight="10.0" prefHeight="62.33332316080728" vgrow="SOMETIMES" />
@@ -32,9 +33,9 @@
                <buttons>
                   <HBox alignment="CENTER" prefHeight="63.0" prefWidth="531.0">
                      <children>
-                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="131.0" />
-                        <Button mnemonicParsing="false" onAction="#onLeitaHandler" text="Leita" />
-                        <ChoiceBox fx:id="sortChoiceBox" prefHeight="25.0" prefWidth="90.0">
+                        <TextField fx:id="searchField" prefHeight="25.0" prefWidth="221.0" />
+                        <Button mnemonicParsing="false" onAction="#onLeitaHandler" prefHeight="25.0" prefWidth="121.0" text="Search" />
+                        <ChoiceBox fx:id="sortChoiceBox" prefHeight="25.0" prefWidth="177.0">
                            <HBox.margin>
                               <Insets left="100.0" />
                            </HBox.margin>
@@ -43,22 +44,39 @@
                   </HBox>
                </buttons>
             </ButtonBar>
-            <VBox alignment="TOP_CENTER" prefHeight="399.0" prefWidth="74.0" spacing="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <VBox alignment="TOP_CENTER" prefHeight="379.0" prefWidth="91.0" spacing="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Button mnemonicParsing="false" onAction="#openDayTourHandler" text="Skoða">
+                  <Button mnemonicParsing="false" onAction="#openDayTourHandler" prefHeight="25.0" prefWidth="96.0" text="Get details" textFill="#4260c7">
                      <VBox.margin>
                         <Insets top="20.0" />
-                     </VBox.margin></Button>
-                  <Button mnemonicParsing="false" onAction="#onCreateHandler" text="Búa til" />
-                  <Button mnemonicParsing="false" onAction="#BokaButtonHandler" text="Bóka" />
-                  <Button mnemonicParsing="false" onAction="#deleteButtonHandler" text="Eyða" textAlignment="CENTER" />
-                  <Text fx:id="actionText" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="90.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button mnemonicParsing="false" onAction="#BokaButtonHandler" prefHeight="25.0" prefWidth="97.0" text="Book tour" textFill="#4260c7">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Text fx:id="actionText" fill="#4260c7" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="90.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Text>
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#onCreateHandler" prefHeight="25.0" prefWidth="94.0" text="Create" textFill="#4260c7">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#deleteButtonHandler" prefHeight="25.0" prefWidth="93.0" text="Delete" textAlignment="CENTER" textFill="#e11010">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                </children>
             </VBox>
             <VBox alignment="CENTER" GridPane.columnIndex="1">
                <children>
-                  <Label text="User:" />
-                  <Label fx:id="userName" text="Label" />
+                  <Label fx:id="userName" alignment="CENTER" prefHeight="21.0" prefWidth="87.0" text="Label" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font></Label>
                </children></VBox>
          </children>
       </GridPane>
