--- a/src/main/resources/com/example/throunndaytour/tourDetails-view.fxml
+++ b/src/main/resources/com/example/throunndaytour/tourDetails-view.fxml
@@ -1,39 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.TourDetailsController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="281.0" prefWidth="294.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.throunndaytour.vidmot.TourDetailsController">
     <children>
+      <HBox prefHeight="46.0" prefWidth="294.0">
+         <children>
+               <Label fx:id="nameLabel" alignment="BOTTOM_LEFT" prefHeight="65.0" prefWidth="574.0" textFill="#4260c7">
+               <font>
+                  <Font name="System Bold" size="19.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+        <HBox alignment="CENTER" prefHeight="160.0" prefWidth="294.0">
+         <children>
+            <Text fx:id="descriptionText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="235.80335927009583" />
+         </children>
+        </HBox>
+      <HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0">
+         <children>
+               <Label fx:id="priceLabel" prefHeight="17.0" prefWidth="419.0" textFill="#4260c7">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
         <HBox alignment="CENTER">
-            <Label fx:id="nameLabel">
+            <Label fx:id="locationLabel" prefHeight="17.0" prefWidth="599.0" textFill="#4260c7">
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Label>
         </HBox>
-      <HBox alignment="CENTER" prefHeight="71.0" prefWidth="600.0">
+      <HBox prefHeight="21.0" prefWidth="396.0">
          <children>
-            <Text fx:id="descriptionText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="24.803359270095825" />
+               <Label fx:id="dateLabel" prefHeight="17.0" prefWidth="106.0" textFill="#4260c7">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </HBox>
-        <HBox alignment="CENTER">
-            <Label fx:id="priceLabel" />
-        </HBox>
-        <HBox alignment="CENTER">
-            <Label fx:id="durationLabel" />
-        </HBox>
-        <HBox alignment="CENTER">
-            <Label fx:id="dateLabel" />
-        </HBox>
-        <HBox alignment="CENTER">
-            <Label fx:id="locationLabel" />
-        </HBox>
-        <HBox alignment="CENTER">
-            <Button onAction="#onBokaClick" text="Bóka" />
-        </HBox>
+      <HBox prefHeight="19.0" prefWidth="396.0">
+         <children>
+               <Label fx:id="durationLabel" prefHeight="17.0" prefWidth="155.0" textFill="#4260c7">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
     </children>
 </VBox>
